# subt_hello_world

./: README.md  hello_world_deps.rosinstall  run.bash
docker/: README.md  build_common_image.bash  build_dev_image.bash  build_entry_image.bash  join.bash  run_dev_container.bash  run_entry_container.bash
docker/hello_world_common/: Dockerfile
docker/hello_world_dev/: Dockerfile  setup_solution_ws.bash
docker/hello_world_entry/: Dockerfile  run_solution.bash
docker/subt_catkin_install/: Dockerfile  README.md
posts/: 01_hello_world.md  02_docker_and_slam.md  03_perception.md  04_navigation.md  05_communications.md
subt_solution_launch/: CMakeLists.txt  package.xml
subt_solution_launch/config/cartographer/: cartographer_2d.lua  cartographer_3d.lua  cartographer_3d_X1.lua
subt_solution_launch/config/move_base/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  planner.yaml
subt_solution_launch/launch/: cartographer.launch  communications.launch  detect_and_report_artifacts.launch  navigation.launch  robot.launch  yolo_v2-tiny.launch  yolo_v3-tiny.launch
subt_solution_launch/scripts/: simple_solution.py
subt_solution_launch/src/: ToTransformStamped.h  artifact_reporter.cpp  artifact_reporter_comms.cpp  base_link_costmap_projector.cpp  find_artifact_origin.cpp  pc_filter.cpp  report_relay.cpp
