<?xml version="1.0"?>
<package format="2">
  <name>subt_solution_launch</name>
  <version>0.0.1</version>
  <description>Launch/bringup files for SubT Solution</description>

  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>cartographer_ros</depend>
  <depend>darknet_ros</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>subt_communication_broker</depend>
  <depend>subt_ign</depend>
  <depend>subt_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>move_base</depend>
  <depend>dwa_local_planner</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
</package>
